# robotiq

./: .gitignore  README.md
robotiq/: package.xml
robotiq_control/: CMakeLists.txt  package.xml  setup.py
robotiq_control/config/: cmodel_action_controller.yaml  cmodel_action_controller_140.yaml  cmodel_action_controller_85.yaml  cmodel_action_controller_Hand-E.yaml  cmodel_action_controller_hande.yaml  gripper_85_controller.yaml  gripper_hande_controller.yaml
robotiq_control/launch/: cmodel_action_controller.launch  cmodel_simple_controller.launch  ur_cmodel_action_controller.launch  ur_cmodel_simple_controller.launch  urcap_cmodel_action_controller.launch  urcap_cmodel_simple_controller.launch
robotiq_control/scripts/: cmodel_action_controller.py  cmodel_action_controller_hande.py  cmodel_rtu_driver.py  cmodel_tcp_driver.py  cmodel_urcap_driver.py  cmodel_urscript_driver.py  robotiq_simple_controller.py
robotiq_control/src/: robotiq_urscript.script  robotiq_urscript_activate.ur  robotiq_urscript_ex.ur  robotiq_urscript_move.ur  robotiq_urscript_open.ur  robotiq_urscript_set.ur
robotiq_control/src/robotiq_control/: cmodel_base.py  cmodel_urcap.py  cmodel_urscript.py  controller.py
robotiq_description/: CMakeLists.txt  package.xml
robotiq_description/launch/: display.launch  upload_robotiq_85_gripper.launch
robotiq_description/meshes/exchanger/: SXR0030-M-c.stl  SXR0030-M.stl  SXR0030-TF4-c.stl  SXR0030-TF4.stl  SXRZ0030-MF4-c.stl  SXRZ0030-MF4.stl
robotiq_description/meshes/hande/: finger_1-collision.dae  finger_1.dae  finger_2-collision.dae  finger_2.dae  hand-e-collision.dae  hand-e.dae
robotiq_description/urdf/: kosmek_manual_exchanger.urdf.xacro  robotiq_140_gripper.urdf.xacro  robotiq_140_gripper.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_gripper_cb.urdf.xacro  robotiq_85_gripper_sim_base.urdf.xacro  robotiq_arg2f.xacro  robotiq_hande.urdf  robotiq_hande.urdf.xacro  robotiq_hande_gripper.transmission.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_world.urdf.xacro
robotiq_ft_sensor/config/: config.ini
robotiq_ft_sensor/scripts/: publish_torque_force_sensor_data.py
robotiq_gazebo/: CMakeLists.txt  package.xml
robotiq_gazebo/launch/: hande_basic.launch
robotiq_gazebo/scripts/: cmodel_controller_emulator.py
robotiq_gazebo/src/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
robotiq_msgs/: CMakeLists.txt  package.xml
robotiq_msgs/action/: CModelCommand.action
