<?xml version="1.0"?>
<package>
  <name>robotiq</name>
  <version>0.1.0</version>
  <description>Robotiq metapackage</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>robotiq_control</run_depend>
  <run_depend>robotiq_description</run_depend>
  <run_depend>robotiq_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
