<package>
  <name>robotiq_control</name>
  <version>0.1.0</version>
  <description>The robotiq_control package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>python-pymodbus</run_depend>
  <run_depend>robotiq_description</run_depend>
  <run_depend>robotiq_msgs</run_depend>
</package>
