<?xml version="1.0"?>
<package>
  <name>robotiq_description</name>
  <version>0.1.0</version>
  <description>The robotiq_description package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
