<?xml version="1.0"?>
<package format="2">
  <name>robotiq_description</name>
  <version>0.1.0</version>
  <description>The robotiq_description package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <!-- <depend>openrave_catkin</depend> -->

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
